--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head"> Address</div>
-                                    <div class="sub-title">Județul Arad, Arad</div>
+                                    <div class="sub-title">Județul Sibiu, Sibiu</div>
                                 </div>
                             </div>
 <div class="row">
